--- a/frontend/login.html
+++ b/frontend/login.html
@@ -90,7 +90,7 @@
     const email = document.getElementById("loginEmail").value;
     const password = document.getElementById("loginPassword").value;
 
-    fetch("http://localhost:5000/api/auth/login", {
+    fetch("https://ganesha-backend.onrender.com/api/auth/login", {
       method: "POST",
       headers: {
         "Content-Type": "application/json"
