--- a/frontend/register.html
+++ b/frontend/register.html
@@ -92,7 +92,8 @@
         const password = document.getElementById("password").value;
 
         try {
-          const res = await fetch("http://localhost:5000/api/auth/register", {
+          const res = await fetch("https://ganesha-backend.onrender.com/api/auth/register", {
+
             method: "POST",
             headers: { "Content-Type": "application/json" },
             body: JSON.stringify({ email, password }),
