--- a/frontend/event.html
+++ b/frontend/event.html
@@ -155,7 +155,7 @@
         }
 
         try {
-          const res = await fetch("http://localhost:5000/api/event/add", {
+          const res = await fetch("https://ganesha-backend.onrender.com/api/event/add", {
             method: "POST",
             headers: {
               "Content-Type": "application/json",
