--- a/frontend/eventlist.html
+++ b/frontend/eventlist.html
@@ -106,7 +106,7 @@
       window.location.href = "login.html";
     }
 
-    fetch("http://localhost:5000/api/event/all", {
+    fetch("https://ganesha-backend.onrender.com/api/event/all", {
       headers: {
         Authorization: "Bearer " + token
       }
