--- a/frontend/donations.html
+++ b/frontend/donations.html
@@ -86,7 +86,7 @@
       alert("Please login first.");
       window.location.href = "login.html";
     } else {
-      fetch("http://localhost:5000/api/donation/all", {
+      fetch("https://ganesha-backend.onrender.com/api/donation/all", {
         headers: {
           Authorization: "Bearer " + token,
         },
