--- a/frontend/gallery.html
+++ b/frontend/gallery.html
@@ -202,7 +202,7 @@
         shareBtn.className = "share-btn";
         shareBtn.textContent = "🔗 Share";
         shareBtn.onclick = () => {
-          const shareUrl = "http://localhost:5000" + img.url;
+          const shareUrl = "https://ganesha-backend.onrender.com" + img.url;
           navigator.clipboard.writeText(shareUrl);
           alert("Copied to clipboard:\n" + shareUrl);
         };
@@ -212,7 +212,7 @@
         deleteBtn.textContent = "🗑️ Delete";
         deleteBtn.onclick = () => {
           if (confirm("Are you sure you want to delete this image?")) {
-            fetch(`http://localhost:5000/api/gallery/${img.filename}`, {
+            fetch(`https://ganesha-backend.onrender.com/api/gallery/${img.filename}`, {
               method: "DELETE"
             })
             .then(res => res.json())
@@ -261,7 +261,7 @@
         document.body.classList.add("dark");
       }
 
-      fetch("http://localhost:5000/api/gallery/images")
+      fetch("https://ganesha-backend.onrender.com/api/gallery/images")
         .then(res => res.json())
         .then(data => {
           if (!data.success || !Array.isArray(data.images)) return;
