--- a/frontend/gallery.html
+++ b/frontend/gallery.html
@@ -163,6 +163,10 @@
     </select>
     <button class="toggle-theme" onclick="toggleTheme()">🌓 Toggle Theme</button>
   </div>
+  <div id="loading" style="text-align: center; font-size: 18px; color: #ff6f00;">
+  ⏳ Loading gallery...
+</div>
+<div class="gallery" id="galleryGrid"></div>
 
   <div class="gallery" id="galleryGrid"></div>
 
