--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,45 +14,68 @@
 
 <script type="text/javascript">
   function googleTranslateElementInit() {
-    new google.translate.TranslateElement({
-      pageLanguage: 'en',
-      includedLanguages: 'en,kn',
-      layout: google.translate.TranslateElement.InlineLayout.SIMPLE
-    }, 'google_translate_element');
+    new google.translate.TranslateElement(
+      {
+        pageLanguage: 'en',
+        includedLanguages: 'en,kn',
+        layout: google.translate.TranslateElement.InlineLayout.SIMPLE
+      },
+      'google_translate_element'
+    );
   }
+</script>
+
+<script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
 </script>
 
 <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
   <style>
-/* Container position */
+/* Google Translate Button Customization */
 #google_translate_element {
   position: fixed;
-  bottom: 20px;
+  top: 20px;
   right: 20px;
   z-index: 999;
-  background: #ffedd5;  /* soft orange background */
-  padding: 8px 12px;
-  border-radius: 8px;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+  background: linear-gradient(135deg, #ffb347, #ffcc33);
+  padding: 10px 16px;
+  border-radius: 25px;
+  box-shadow: 0 5px 15px rgba(0,0,0,0.2);
   font-family: 'Poppins', sans-serif;
+  animation: floaty 3s infinite ease-in-out;
 }
 
-/* Dropdown styling */
+@keyframes floaty {
+  0% { transform: translateY(0px); }
+  50% { transform: translateY(-5px); }
+  100% { transform: translateY(0px); }
+}
+
 .goog-te-combo {
-  padding: 6px 10px;
-  font-size: 14px;
-  border-radius: 6px;
-  border: 1px solid #ff9900;
-  background-color: #fff7e6;
-  color: #333;
+  background: transparent;
+  border: none;
+  font-size: 16px;
   font-weight: bold;
-  outline: none;
+  color: white;
   cursor: pointer;
+  outline: none;
 }
 
 .goog-te-gadget {
-  font-size: 0px; /* hides default text "Translate" */
+  font-size: 0; /* hide "Translate" text */
+  
+  
 }
+/* Hide Google top bar */
+body > .goog-te-banner-frame.skiptranslate {
+  display: none !important;
+}
+
+body {
+  top: 0px !important;
+}
+
+
 </style>
 
   <style>
@@ -217,6 +240,7 @@
 </head>
 
 <body>
+  <div id="google_translate_element"></div>
 
   <!-- Floating Diyas -->
   <div class="floating-diyas">
