--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,68 +14,45 @@
 
 <script type="text/javascript">
   function googleTranslateElementInit() {
-    new google.translate.TranslateElement(
-      {
-        pageLanguage: 'en',
-        includedLanguages: 'en,kn',
-        layout: google.translate.TranslateElement.InlineLayout.SIMPLE
-      },
-      'google_translate_element'
-    );
+    new google.translate.TranslateElement({
+      pageLanguage: 'en',
+      includedLanguages: 'en,kn',
+      layout: google.translate.TranslateElement.InlineLayout.SIMPLE
+    }, 'google_translate_element');
   }
-</script>
-
-<script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-
 </script>
 
 <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
   <style>
-/* Google Translate Button Customization */
+/* Container position */
 #google_translate_element {
   position: fixed;
-  top: 20px;
+  bottom: 20px;
   right: 20px;
   z-index: 999;
-  background: linear-gradient(135deg, #ffb347, #ffcc33);
-  padding: 10px 16px;
-  border-radius: 25px;
-  box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+  background: #ffedd5;  /* soft orange background */
+  padding: 8px 12px;
+  border-radius: 8px;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.15);
   font-family: 'Poppins', sans-serif;
-  animation: floaty 3s infinite ease-in-out;
 }
 
-@keyframes floaty {
-  0% { transform: translateY(0px); }
-  50% { transform: translateY(-5px); }
-  100% { transform: translateY(0px); }
-}
-
+/* Dropdown styling */
 .goog-te-combo {
-  background: transparent;
-  border: none;
-  font-size: 16px;
+  padding: 6px 10px;
+  font-size: 14px;
+  border-radius: 6px;
+  border: 1px solid #ff9900;
+  background-color: #fff7e6;
+  color: #333;
   font-weight: bold;
-  color: white;
-  cursor: pointer;
   outline: none;
+  cursor: pointer;
 }
 
 .goog-te-gadget {
-  font-size: 0; /* hide "Translate" text */
-  
-  
+  font-size: 0px; /* hides default text "Translate" */
 }
-/* Hide Google top bar */
-body > .goog-te-banner-frame.skiptranslate {
-  display: none !important;
-}
-
-body {
-  top: 0px !important;
-}
-
-
 </style>
 
   <style>
@@ -240,7 +217,6 @@ body {
 </head>
 
 <body>
-  <div id="google_translate_element"></div>
 
   <!-- Floating Diyas -->
   <div class="floating-diyas">
