🎨 Updated frontend files

--- a/frontend/donation.html
+++ b/frontend/donation.html
@@ -79,7 +79,7 @@
 
     <button class="logout-btn" onclick="logout()">Logout</button>
   </div>
-
+  <script src="frontend\language-switcher.js"></script>
   <script>
     const donationForm = document.getElementById("donationForm");
 
