--- a/frontend/event.html
+++ b/frontend/event.html
@@ -95,7 +95,7 @@
   <ul id="eventList"></ul>
 
   <button class="back-btn" onclick="window.location.href='dashboard.html'">⬅️ Back to Dashboard</button>
-
+  <script src="frontend\language-switcher.js"></script>
   <script>
     const token = localStorage.getItem("token");
 
