--- a/frontend/fireworks-demo.html
+++ b/frontend/fireworks-demo.html
@@ -19,7 +19,7 @@
 </head>
 <body>
   <canvas id="fireworksCanvas"></canvas>
-
+  <script src="frontend\language-switcher.js"></script>
   <script>
     const canvas = document.getElementById("fireworksCanvas");
     const ctx = canvas.getContext("2d");
