--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,50 +10,8 @@
   
   <!-- AOS Animation -->
   <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet" />
-  <div id="google_translate_element" style="position: fixed; bottom: 20px; right: 20px; z-index: 999;"></div>
 
-<script type="text/javascript">
-  function googleTranslateElementInit() {
-    new google.translate.TranslateElement({
-      pageLanguage: 'en',
-      includedLanguages: 'en,kn',
-      layout: google.translate.TranslateElement.InlineLayout.SIMPLE
-    }, 'google_translate_element');
-  }
-</script>
-
-<script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-  <style>
-/* Container position */
-#google_translate_element {
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
-  z-index: 999;
-  background: #ffedd5;  /* soft orange background */
-  padding: 8px 12px;
-  border-radius: 8px;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.15);
-  font-family: 'Poppins', sans-serif;
-}
-
-/* Dropdown styling */
-.goog-te-combo {
-  padding: 6px 10px;
-  font-size: 14px;
-  border-radius: 6px;
-  border: 1px solid #ff9900;
-  background-color: #fff7e6;
-  color: #333;
-  font-weight: bold;
-  outline: none;
-  cursor: pointer;
-}
-
-.goog-te-gadget {
-  font-size: 0px; /* hides default text "Translate" */
-}
-</style>
+  <script src="frontend\language-switcher.js"></script>
 
   <style>
     body {
