🎨 Updated frontend files

--- a/frontend/expense.html
+++ b/frontend/expense.html
@@ -88,7 +88,7 @@
   </form>
 
   <button class="logout-btn" onclick="logout()">Logout</button>
-  <script src="frontend\language-switcher.js"></script>
+  <script src="frontend/language-switcher.js"></script>
   <script>
     const token = localStorage.getItem("token");
 
