--- a/frontend/gallery.html
+++ b/frontend/gallery.html
@@ -167,7 +167,7 @@
   <div class="gallery" id="galleryGrid"></div>
 
   <footer>© 2025 Ganesha Festival | Kumbar Bedi Street Devotees</footer>
-  <script src="frontend\language-switcher.js"></script>
+  <script src="frontend/language-switcher.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/js/lightbox.min.js"></script>
   <script>
     let allImages = [];
