--- a/frontend/eventlist.html
+++ b/frontend/eventlist.html
@@ -97,7 +97,7 @@
   </table>
 
   <button onclick="window.location.href='dashboard.html'">⬅️ Back to Dashboard</button>
-  <script src="frontend\language-switcher.js"></script>
+  <script src="frontend/language-switcher.js"></script>
   <script>
     const token = localStorage.getItem("token");
 
