--- a/frontend/expenses.html
+++ b/frontend/expenses.html
@@ -83,7 +83,7 @@
     <button onclick="logout()">Logout</button>
     <button onclick="window.location.href='dashboard.html'">⬅️ Back to Dashboard</button>
   </div>
-  <script src="frontend\language-switcher.js"></script>
+  <script src="frontend/language-switcher.js"></script>
   <script>
     const token = localStorage.getItem("token");
 
