--- a/frontend/landing2.html
+++ b/frontend/landing2.html
@@ -140,7 +140,7 @@
   <footer>
     © 2025 Ganesha Festival | Kumbar Bedi Street Devotees
   </footer>
-  <script src="frontend\language-switcher.js"></script>
+  <script src="frontend/language-switcher.js"></script>
   <!-- AOS -->
   <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
 
