🎨 Updated frontend files

--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -182,7 +182,7 @@
 
     </section>
   </div>
-  <script src="frontend/language-switcher.js"></script>
+  <script src="language-switcher.js"></script>
   <script>
     // Authentication + Dashboard Data
     const token = localStorage.getItem("token");
