--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,7 +11,7 @@
   <!-- AOS Animation -->
   <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet" />
 
-  <script src="frontend/language-switcher.js"></script>
+  <script src="language-switcher.js"></script>
 
   <style>
     body {
