--- a/frontend/login.html
+++ b/frontend/login.html
@@ -82,7 +82,7 @@
     </form>
     <p>Don't have an account? <a href="register.html">Register</a></p>
   </div>
-  <script src="frontend/language-switcher.js"></script>
+  <script src="language-switcher.js"></script>
   <script>
   document.getElementById("loginForm").addEventListener("submit", function (e) {
     e.preventDefault();
