--- a/frontend/register.html
+++ b/frontend/register.html
@@ -82,7 +82,7 @@
     </form>
     <p>Already have an account? <a href="login.html">Login</a></p>
   </div>
-  <script src="frontend/language-switcher.js"></script>
+  <script src="language-switcher.js"></script>
 
   <script>
     const registerForm = document.getElementById("registerForm");
