--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -173,12 +173,14 @@
     <button onclick="window.location.href='donation.html'">➕ Add Donation</button>
     <button onclick="window.location.href='expense.html'">➕ Add Expense</button>
     <button onclick="window.location.href='event.html'">➕ Add Event</button>
+    <button onclick="window.location.href='gallery.html'">➕ Gallery</button>
   </div>
 
   <!-- Buttons for all users -->
   <button onclick="window.location.href='donations.html'">📄 View Donations</button>
   <button onclick="window.location.href='expenses.html'">📄 View Expenses</button>
   <button onclick="window.location.href='eventlist.html'">📅 View Events</button>
+
 </div>
 
     </section>
