--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -180,7 +180,7 @@
   <button onclick="window.location.href='donations.html'">📄 View Donations</button>
   <button onclick="window.location.href='expenses.html'">📄 View Expenses</button>
   <button onclick="window.location.href='eventlist.html'">📅 View Events</button>
-
+  <button onclick="window.location.href='moments.html'">📅 View Gallery</button>
 </div>
 
     </section>
