--- a/frontend/moments.html
+++ b/frontend/moments.html
@@ -18,31 +18,24 @@
   </div>
 
  <script>
-  // Replace with your deployed backend URL
   const BACKEND_URL = "https://ganesha-backend.onrender.com/api/gallery/getAllImages";
 
   async function loadGallery() {
     try {
       const res = await fetch(BACKEND_URL);
-      const result = await res.json();
-
-      // Check if result is an object and contains array under `images`
-      const data = Array.isArray(result)
-        ? result
-        : Array.isArray(result.images)
-          ? result.images
-          : [];
+      const data = await res.json(); // data is { success: true, images: [...] }
 
       const gallery = document.getElementById('gallery');
       gallery.innerHTML = '';
 
-      data.reverse().forEach(image => {
+      // Access the images array and reverse it
+      data.images.reverse().forEach(image => {
         const imgBlock = document.createElement('div');
         imgBlock.className = "relative overflow-hidden rounded-lg shadow-md";
 
         imgBlock.innerHTML = `
-          <a href="${image.imageUrl}" data-lightbox="gallery" data-title="${image.caption || 'Festival Moment'}">
-            <img src="${image.imageUrl}" alt="Festival Image" class="w-full h-64 object-cover hover:scale-105 transition-transform duration-300 rounded-lg" />
+          <a href="${image.url}" data-lightbox="gallery" data-title="${image.caption || 'Festival Moment'}">
+            <img src="${image.url}" alt="Festival Image" class="w-full h-64 object-cover hover:scale-105 transition-transform duration-300 rounded-lg" />
           </a>
           <div class="absolute bottom-0 left-0 w-full bg-black bg-opacity-50 text-white text-sm p-2">
             ${image.caption || 'Festival Moment'}
@@ -51,7 +44,6 @@
 
         gallery.appendChild(imgBlock);
       });
-
     } catch (error) {
       console.error("Error loading images:", error);
     }
@@ -59,6 +51,7 @@
 
   loadGallery();
 </script>
+
 
 </body>
 </html>
