--- a/frontend/moments.html
+++ b/frontend/moments.html
@@ -62,7 +62,7 @@
   <script>
     const backendURL = 'https://ganesha-backend.onrender.com';
 
-    fetch(`${backendURL}/gallery`)  // <-- FIXED URL
+    fetch(`${backendURL}/api/gallery/moments`)  // <-- FIXED URL
       .then(response => response.json())
       .then(data => {
         if (data.success) {
