--- a/frontend/moments.html
+++ b/frontend/moments.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Festival Moments Gallery</title>
+  <title>Festival Moments Gallery!</title>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
