--- a/frontend/index.html
+++ b/frontend/index.html
@@ -195,7 +195,7 @@
 
   <!-- Hero Section -->
   <section class="hero">
-    <img src="assets\images\ganesh.png" alt="Lord Ganesha" class="ganesha-img" data-aos="zoom-in" />
+    <img src="assets/images/1.jpeg" alt="Lord Ganesha" class="ganesha-img" data-aos="zoom-in" />
     <h1 data-aos="fade-up">🪔 Celebrate Ganesha Chaturthi like never before!</h1>
     <p data-aos="fade-up" data-aos-delay="300">
       Track donations, view events, and join your community’s celebration with devotion and joy!
