--- a/frontend/landing2.html
+++ b/frontend/landing2.html
@@ -125,7 +125,7 @@
 
   <!-- Hero Section -->
   <section class="hero">
-    <img src="assets\images\ganesh.png" alt="Lord Ganesha" class="ganesha-img" data-aos="zoom-in" />
+    <img src="assets/images/2.jpeg" alt="Lord Ganesha" class="ganesha-img" data-aos="zoom-in" />
     <h1 data-aos="fade-down">🌃 Ganesha Night of Joy</h1>
     <p data-aos="fade-up" data-aos-delay="200">
       Celebrate under the stars with modaks, devotion, and unity. Experience the joy of Chaturthi night!
