--- a/frontend/index.html
+++ b/frontend/index.html
@@ -203,9 +203,7 @@
 
     <div class="btn-group" data-aos="fade-up" data-aos-delay="500">
       <div class="nav-buttons">
-    <button onclick="location.href='index.html'">⬅ Back</button>
     <button onclick="location.href='landing2.html'">Next ➡</button>
-    <button onclick="location.href='login.html'">🎯 Skip</button>
 </div>
 
     </div>
@@ -223,7 +221,7 @@
 
 
   <footer>
-    © 2025 Ganesha Festival | Made with ❤️ by Kumbar Bedi Street Boys
+    © 2025 Ganesha Festival | Made with ❤️ by Ranjith E
   </footer>
 
   <!-- AOS Animation JS -->
