--- a/frontend/landing2.html
+++ b/frontend/landing2.html
@@ -132,8 +132,7 @@
     </p>
 
     <div class="btn-group" data-aos="fade-up" data-aos-delay="400">
-      <button onclick="location.href='register.html'">🙏 Register</button>
-      <button onclick="location.href='eventlist.html'">📅 View Celebrations</button>
+      <button onclick="location.href='dashboard.html'">Next ➡</button>
       <button onclick="location.href='login.html'">🎊 Login</button>
     </div>
   </section>
