--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -191,8 +191,8 @@
     const token = localStorage.getItem("token");
 
     if (!token) {
-      alert("Please login first.");
-      window.location.href = "login.html";
+      alert("Welcome to Dashboard");
+      window.location.href = "dashboard.html";
     } else {
       const decodedToken = JSON.parse(atob(token.split('.')[1]));
       const isAdmin = decodedToken.role === "admin";
