--- a/frontend/eventlist.html
+++ b/frontend/eventlist.html
@@ -108,7 +108,7 @@
 
     fetch("https://ganesha-backend.onrender.com/api/event/all", {
       headers: {
-        Authorization: "Bearer " + token
+        Authorization: "Bearer "
       }
     })
     .then((res) => res.json())
