--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -191,7 +191,8 @@
     const token = localStorage.getItem("token");
 
     if (!token) {
-      alert("Welcome to Dashboard");
+      alert("Please login first.");
+      window.location.href = "login.html";
     } else {
       const decodedToken = JSON.parse(atob(token.split('.')[1]));
       const isAdmin = decodedToken.role === "admin";
