✨ Updated frontend changes

--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -181,6 +181,9 @@
   <!-- Buttons for all users -->
   <button onclick="window.location.href='eventlist.html'">📅 View Events</button>
   <button onclick="window.location.href='moments.html'">📅 View Gallery</button>
+  <button onclick="window.location.href='groupmembers.html'">🧔🏻Group members</button>
+  <button onclick="window.location.href='sponsers.html'">💸 Sponsers</button>
+
 </div>
 
     </section>
