--- a/frontend/index.html
+++ b/frontend/index.html
@@ -198,6 +198,7 @@
     <img src="assets/images/1.jpeg" alt="Lord Ganesha" class="ganesha-img" data-aos="zoom-in" />
     <h1 data-aos="fade-up">🪔 ಶ್ರೀ ವಿದ್ಯಾಗಣಪತಿ ಗೆಳೆಯರ ಬಳಗ</h1>
     <p data-aos="fade-up" data-aos-delay="300">
+      21ನೇ ವರ್ಷದ ಶ್ರೀ ವಿನಾಯಕಸ್ವಾಮಿ ಪೂಜಾ ಮಹೋತ್ಸವ ಆಹ್ವಾನ ಪತ್ರಿಕೆ
       ಸುಸ್ವಾಗತ
     </p>
 
