--- a/frontend/index.html
+++ b/frontend/index.html
@@ -197,10 +197,10 @@
   <section class="hero">
     <img src="assets/images/1.jpeg" alt="Lord Ganesha" class="ganesha-img" data-aos="zoom-in" />
     <h1 data-aos="fade-up">🪔 ಶ್ರೀ ವಿದ್ಯಾಗಣಪತಿ ಗೆಳೆಯರ ಬಳಗ</h1>
-    <p data-aos="fade-up" data-aos-delay="300">
+    <h2 data-aos="fade-up" data-aos-delay="300">
       21ನೇ ವರ್ಷದ ಶ್ರೀ ವಿನಾಯಕಸ್ವಾಮಿ ಪೂಜಾ ಮಹೋತ್ಸವ ಆಹ್ವಾನ ಪತ್ರಿಕೆ
-      ಸುಸ್ವಾಗತ
-    </p>
+      ಪ್ರತಿಷ್ಟಾಪನೆ ದಿನಾಂಕ : 27-08-2025, ಶನಿವಾರ
+    </h2>
 
     <div class="btn-group" data-aos="fade-up" data-aos-delay="500">
       <div class="nav-buttons">
