--- a/frontend/index.html
+++ b/frontend/index.html
@@ -201,6 +201,8 @@
       21ನೇ ವರ್ಷದ ಶ್ರೀ ವಿನಾಯಕಸ್ವಾಮಿ ಪೂಜಾ ಮಹೋತ್ಸವ ಆಹ್ವಾನ ಪತ್ರಿಕೆ 
       <br>
       ಪ್ರತಿಷ್ಟಾಪನೆ ದಿನಾಂಕ : 27-08-2025, ಶನಿವಾರ
+      <br>
+      ಸ್ಥಳ : ವಾರ್ಡ್ ನಂ. 13, ಕುಂಬಾರ ಬೀದಿ, ದೇವನಹಳ್ಳಿ ಟೌನ್, ಬೆಂಗಳೂರು ಗ್ರಾಮಾಂತರ ಜಿಲ್ಲೆ.
     </h2>
 
     <div class="btn-group" data-aos="fade-up" data-aos-delay="500">
