--- a/frontend/index.html
+++ b/frontend/index.html
@@ -50,10 +50,6 @@
       margin: 25px 0 10px;
       color: #bf360c;
     }
-    .year{
-      font-size: 2em;
-      color: #bf360c;
-    }
 
     p {
       font-size: 1.2em;
@@ -202,7 +198,7 @@
     <img src="assets/images/1.jpeg" alt="Lord Ganesha" class="ganesha-img" data-aos="zoom-in" />
     <h1 data-aos="fade-up">🪔 ಶ್ರೀ ವಿದ್ಯಾಗಣಪತಿ ಗೆಳೆಯರ ಬಳಗ</h1>
     <h2 data-aos="fade-up" data-aos-delay="300">
-      <p class="year">21</p>ನೇ ವರ್ಷದ ಶ್ರೀ ವಿನಾಯಕಸ್ವಾಮಿ ಪೂಜಾ ಮಹೋತ್ಸವ ಆಹ್ವಾನ ಪತ್ರಿಕೆ 
+      <p color = color: #d84315;>21</p>ನೇ ವರ್ಷದ ಶ್ರೀ ವಿನಾಯಕಸ್ವಾಮಿ ಪೂಜಾ ಮಹೋತ್ಸವ ಆಹ್ವಾನ ಪತ್ರಿಕೆ 
       <br>
       ಪ್ರತಿಷ್ಟಾಪನೆ ದಿನಾಂಕ : 27-08-2025, ಶನಿವಾರ
       <br>
