--- a/frontend/index.html
+++ b/frontend/index.html
@@ -52,9 +52,9 @@
     }
 
     p {
-      font-size: 1.8em;
+      font-size: 2.2em;
       max-width: 600px;
-      color: #5d4037;
+      color: #bf360c;
     }
 
     .btn-group {
@@ -199,7 +199,6 @@
     <h1 data-aos="fade-up">🪔 ಶ್ರೀ ವಿದ್ಯಾಗಣಪತಿ ಗೆಳೆಯರ ಬಳಗ</h1>
     <h2 data-aos="fade-up" data-aos-delay="300">
       <p>21</p>ನೇ ವರ್ಷದ ಶ್ರೀ ವಿನಾಯಕಸ್ವಾಮಿ ಪೂಜಾ ಮಹೋತ್ಸವ ಆಹ್ವಾನ ಪತ್ರಿಕೆ 
-      <br>
       ಪ್ರತಿಷ್ಟಾಪನೆ ದಿನಾಂಕ : 27-08-2025, ಶನಿವಾರ
       <br>
       ಸ್ಥಳ : ವಾರ್ಡ್ ನಂ. 13, ಕುಂಬಾರ ಬೀದಿ, ದೇವನಹಳ್ಳಿ ಟೌನ್, ಬೆಂಗಳೂರು ಗ್ರಾಮಾಂತರ ಜಿಲ್ಲೆ.
