--- a/frontend/index.html
+++ b/frontend/index.html
@@ -198,11 +198,13 @@
     <img src="assets/images/1.jpeg" alt="Lord Ganesha" class="ganesha-img" data-aos="zoom-in" />
     <h1 data-aos="fade-up">🪔 ಶ್ರೀ ವಿದ್ಯಾಗಣಪತಿ ಗೆಳೆಯರ ಬಳಗ</h1>
     <h2 data-aos="fade-up" data-aos-delay="300">
-      <p>21</p>ನೇ ವರ್ಷದ ಶ್ರೀ ವಿನಾಯಕಸ್ವಾಮಿ ಪೂಜಾ ಮಹೋತ್ಸವ ಆಹ್ವಾನ ಪತ್ರಿಕೆ 
-      ಪ್ರತಿಷ್ಟಾಪನೆ ದಿನಾಂಕ : 27-08-2025, ಶನಿವಾರ
+      <p>21ನೇ ವರ್ಷದ ಶ್ರೀ ವಿನಾಯಕಸ್ವಾಮಿ ಪೂಜಾ ಮಹೋತ್ಸವ ಆಹ್ವಾನ ಪತ್ರಿಕೆ 
+      <br>
+      ಪ್ರತಿಷ್ಟಾಪನೆ ದಿನಾಂಕ : 27-08-2025, ಬುಧವಾರ
       <br>
       ಸ್ಥಳ : ವಾರ್ಡ್ ನಂ. 13, ಕುಂಬಾರ ಬೀದಿ, ದೇವನಹಳ್ಳಿ ಟೌನ್, ಬೆಂಗಳೂರು ಗ್ರಾಮಾಂತರ ಜಿಲ್ಲೆ.
     </h2>
+    </p>
 
     <div class="btn-group" data-aos="fade-up" data-aos-delay="500">
       <div class="nav-buttons">
