--- a/frontend/landing2.html
+++ b/frontend/landing2.html
@@ -156,7 +156,7 @@
   </section>
 
   <footer>
-    © 2025 Ganesha Festival | Kumbar Bedi Street Devotees
+    © 2025 Ganesha Festival | Made with ❤️ by Ranjith E
   </footer>
 
   <script src="language-switcher.js"></script>
